--- a/_config.yml
+++ b/_config.yml
@@ -29,13 +29,13 @@ github:
   username: kuhekin # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: kuhekin # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Nguyen Hoang Khang
+  email: kuhekin301m4v@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username # change to your Twitter homepage
@@ -88,7 +88,7 @@ pageviews:
 #     light — Use the light color scheme
 #     dark — Use the dark color scheme
 #
-theme_mode: # [light | dark]
+theme_mode: dark # [light | dark]
 
 # The CDN endpoint for media resources.
 # Notice that once it is assigned, the CDN url
